# tray

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
bindings/: Cargo.toml  build.rs
src/: error.rs  lib.rs  wintray.rs
