[package]
name = "bindings"
version = "0.1.0"
authors = ["Mohammad Danesh <mohammad@danesh.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.11.0"

[build-dependencies]
windows = "0.11.0"
